added type system, updated many relations, made database faster, rewrote stats and invoices

--- a/app/views/entries/edit.html.erb
+++ b/app/views/entries/edit.html.erb
@@ -8,9 +8,7 @@
       <div class="panel-title"><%= t('entry.edit.legend') %></div>
     </div>
     <div class="panel-body">
-      <%= f.select :appliance_id, @appliance_names, label: t('global.appliance') %>
-      <%= f.text_field :brand, label: t('global.brand') %>
-      <%= f.text_field :typenum, label: t('global.typenum') %>
+      <%= f.select :type_id, @type_names, label: t('global.type') %>
       <%= f.text_field :serialnum, label: t('global.serialnum') %>
 
       <%= f.text_field :defect, label: t('global.defect') %>
@@ -36,7 +34,7 @@
         <%= f.check_box :accessoires, label: t('global.accessoires') %>
       <% end %>
 
-      <%= f.select :class_id, @class_names, label: t('global.class') %>
+      <%= f.select :classifications_id, @class_names, label: t('global.class') %>
 
       <%= f.text_area :note, label: t('global.note') %>
     </div>
