--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -26,6 +26,9 @@
                 <% if can? :create, Entry %>
                   <%= link_to(t('home.index.batch'), batch_path(company.id), :class => 'list-group-item') %>
                 <% end %>
+                <% if can? :create, Type %>
+                  <%= link_to(t('home.index.type'), company_types_path(company.id), :class => 'list-group-item') %>
+                <% end %>
               </div>
             </div>
           </div>
