--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -35,46 +35,46 @@
           <tbody class="searchable">
             <% @entries.each do |entry| %>
               <tr>
-                <td><%= @company.abb + @appliances[entry.appliance_id - 1].abb + entry.number %></td>
-                <td><%= @appliances[entry.appliance_id - 1].name %></td>
-                <td><%= entry.brand %></td>
-                <td><%= entry.typenum %></td>
+                <td><%= entry.company.abb + entry.type.appliance.abb + entry.number %></td>
+                <td><%= entry.type.appliance.name %></td>
+                <td><%= entry.type.brand %></td>
+                <td><%= entry.type.typenum %></td>
                 <td><%= entry.serialnum %></td>
                 <td><%= entry.get_status_translated %></td>
                 <% if can? :zip, Entry %>
                   <td>
                   <% unless entry.attachments.length == 0 %>
-                    <%= link_to zip_path(entry.company_id, entry) do %>
+                    <%= link_to zip_path(entry.company, entry) do %>
                       <span class="glyphicon glyphicon-picture"></span>
                     <% end %>
                   <% end %>
                   </td>
                 <% end %>
                 <td>
-                  <%= link_to company_entry_path(entry.company_id, entry) do %>
+                  <%= link_to company_entry_path(entry.company, entry) do %>
                     <span class="glyphicon glyphicon-search"></span>
                   <% end %>
                 </td>
                <% if can? :edit, Entry %>
                   <td data-no-turbolink="true">
-                    <%= link_to sticker_path(entry.company_id, entry) do %>
+                    <%= link_to sticker_path(entry.company, entry) do %>
                       <span class="glyphicon glyphicon-barcode"></span>
                     <% end %>
                   </td>
                   <td data-no-turbolink="true">
-                    <%= link_to ticket_path(entry.company_id, entry) do %>
+                    <%= link_to ticket_path(entry.company, entry) do %>
                       <span class="glyphicon glyphicon-print"></span>
                     <% end %>
                   </td>
                   <td>
-                    <%= link_to edit_company_entry_path(entry.company_id, entry) do %>
+                    <%= link_to edit_company_entry_path(entry.company, entry) do %>
                       <span class="glyphicon glyphicon-pencil"></span>
                     <% end %>
                   </td>
                 <% end %>
                 <% if can? :destroy, Entry %>
                   <td>
-                    <%= link_to(company_entry_path(entry.company_id, entry), :data => { :confirm => t('global.sure') }, :method => :delete) do %>
+                    <%= link_to(company_entry_path(entry.company, entry), :data => { :confirm => t('global.sure') }, :method => :delete) do %>
                       <span class="glyphicon glyphicon-remove"></span>
                     <% end %>
                   </td>
@@ -92,12 +92,12 @@
       <% if @pagination %>
         <%= paginate @entries %>
       <% else %>
-        <%= link_to(t('entry.index.back'), company_entries_path(@company), :class => 'btn btn-mini btn-primary') %>
+        <%= link_to(t('entry.index.back'), company_entries_path(params[:company_id]), :class => 'btn btn-mini btn-primary') %>
       <% end %>
     <% end %>
 
     <% if can? :create, Entry %>
-      <%= link_to(t('entry.index.add_entry'), new_company_entry_path(@company), :class => 'btn btn-mini btn-primary') %>
+      <%= link_to(t('entry.index.add_entry'), new_company_entry_path(params[:company_id]), :class => 'btn btn-mini btn-primary') %>
     <% end %>
 
     <% if @entries.length != 0 and @pagination %>
@@ -120,31 +120,31 @@
             <h4 class="modal-title" id="modalLabel-search"><%= t('entry.index.search') %></h4>
           </div>
           <div class="modal-body">
-            <%= form_tag company_entries_path(@company), :class => "navbar-form", :method => 'get' do %>
+            <%= form_tag company_entries_path(params[:company_id]), :class => "navbar-form", :method => 'get' do %>
                 <p>  
                   <%= text_field_tag :searchnum, params[:searchnum], :placeholder => t('entry.index.searchnum') %>
                   <%= submit_tag t('entry.index.search'), :name => nil, :class => 'btn btn-mini btn-primary', :style => 'height:28px' %>  
                 </p>  
               <% end %>
-              <%= form_tag company_entries_path(@company),:class => "navbar-form", :method => 'get' do %>
+              <%= form_tag company_entries_path(params[:company_id]),:class => "navbar-form", :method => 'get' do %>
                 <p>  
                   <%= text_field_tag :searchbrand, params[:searchbrand], :placeholder => t('entry.index.searchbrand') %>
                   <%= submit_tag t('entry.index.search'), :name => nil, :class => 'btn btn-mini btn-primary', :style => 'height:28px' %>  
                 </p>  
               <% end %>
-              <%= form_tag company_entries_path(@company),:class => "navbar-form", :method => 'get' do %>
+              <%= form_tag company_entries_path(params[:company_id]),:class => "navbar-form", :method => 'get' do %>
                 <p>  
                   <%= text_field_tag :searchtype, params[:searchtype], :placeholder => t('entry.index.searchtype') %>
                   <%= submit_tag t('entry.index.search'), :name => nil, :class => 'btn btn-mini btn-primary', :style => 'height:28px' %>  
                 </p>  
               <% end %>
-              <%= form_tag company_entries_path(@company),:class => "navbar-form", :method => 'get' do %>
+              <%= form_tag company_entries_path(params[:company_id]),:class => "navbar-form", :method => 'get' do %>
                 <p>  
                   <%= text_field_tag :searchserial, params[:searchserial], :placeholder => t('entry.index.searchserial') %>
                   <%= submit_tag t('entry.index.search'), :name => nil, :class => 'btn btn-mini btn-primary', :style => 'height:28px' %>  
                 </p>  
               <% end %>
-              <%= form_tag company_entries_path(@company),:class => "navbar-form", :method => 'get' do %>
+              <%= form_tag company_entries_path(params[:company_id]),:class => "navbar-form", :method => 'get' do %>
                 <p>  
                   <%= select_tag :searchstatus, options_for_select(@statuses) %>
                   <%= submit_tag t('entry.index.search'), :name => nil, :class => 'btn btn-mini btn-primary', :style => 'height:28px' %>  
