--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -2,9 +2,9 @@
 
 <div class="panel panel-default">
   <div class="panel-heading">
-    <%= @company.abb + @appliance.abb + @entry.number %>
+    <%= @entry.company.abb + @entry.type.appliance.abb + @entry.number %>
     &middot;
-    <%= @entry.brand + ' ' + @entry.typenum + ' ' + @appliance.name %>
+    <%= @entry.type.brand + ' ' + @entry.type.typenum + ' ' + @entry.type.appliance.name %>
   </div>
   <div class="panel-body panel-table">
 
@@ -16,7 +16,7 @@
             <% if can? :create, Entry %>
               <tr>
                 <td><h6><%= t('entry.show.barcode') %></h6></td>
-                <td><%= @entry.get_barcode(@company.abb + @appliance.abb + @entry.number.to_s).html_safe %></td>
+                <td><%= @entry.get_barcode(@entry.company.abb + @entry.type.appliance.abb + @entry.number.to_s).html_safe %></td>
               </tr>
             <% end %>
 
@@ -31,15 +31,15 @@
             </tr>
             <tr>
               <td><h6><%= t('entry.show.sent') %></h6></td>
-              <% unless @entry.invoice_id.nil? %>
-                <td>Yes - <%= @invoice.created_at.to_date %></td>
+              <% unless @entry.invoice.nil? %>
+                <td>Yes - <%= @entry.invoice.created_at.to_date %></td>
                   <% else %>
                 <td>No</td>
               <% end %>
             </tr>
             <tr>
               <td><h6><%= t('global.class') %></h6></td>
-              <td><%= @classification.name.presence || '-' %></td>
+              <td><%= @entry.classifications.name.presence || '-' %></td>
             </tr>
 
             <% if can? :create, Entry %>
@@ -153,26 +153,26 @@
   <div class="panel-footer">
     <% if can? :zip, Entry %>
       <% unless @entry.attachments.length == 0 %>
-        <%= link_to(t('entry.show.zip'), zip_path(@company, @entry), :class => 'btn btn-mini btn-primary') %>
+        <%= link_to(t('entry.show.zip'), zip_path(@entry.company, @entry), :class => 'btn btn-mini btn-primary') %>
       <% end %>
     <% end %>
     <div style="float:left;padding-right:4px" data-no-turbolink="true">
       <% if can? :create, Entry %>
-        <%= link_to(t('entry.show.sticker'), sticker_path(@company, @entry), :class => 'btn btn-mini btn-primary') %>
+        <%= link_to(t('entry.show.sticker'), sticker_path(@entry.company, @entry), :class => 'btn btn-mini btn-primary') %>
       <% end %>
     </div>
     <div style="float:left;padding-right:4px" data-no-turbolink="true">
       <% if can? :create, Entry %>
-        <%= link_to('Create ticket', ticket_path(@company, @entry), :class => 'btn btn-mini btn-primary') %>
+        <%= link_to('Create ticket', ticket_path(@entry.company, @entry), :class => 'btn btn-mini btn-primary') %>
       <% end %>
     </div>
     <% if can? :edit, Entry %>
-      <%= link_to(t('entry.show.edit'), edit_company_entry_path(@company, @entry), :class => 'btn btn-mini btn-primary') %>
+      <%= link_to(t('entry.show.edit'), edit_company_entry_path(@entry.company, @entry), :class => 'btn btn-mini btn-primary') %>
     <% end %>
     <% if can? :destroy, Entry %>
-      <%= link_to(t('entry.show.delete'), company_entry_path(@company, @entry), :data => { :confirm => "Are you sure?" }, :class => 'btn btn-mini btn-primary', :method => :delete) %>
+      <%= link_to(t('entry.show.delete'), company_entry_path(@entry.company, @entry), :data => { :confirm => "Are you sure?" }, :class => 'btn btn-mini btn-primary', :method => :delete) %>
     <% end %>
   </div>
 </div>
 
-<%= link_to t('global.back'), company_entries_path(@company) %>
+<%= link_to t('global.back'), company_entries_path(@entry.company) %>
