--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,10 +8,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-          <%= link_to(root_path, :class => "navbar-brand") do %>
-            <img src="../images/logo-tiny.png"/>
-            Badger
-          <% end %>
+          <%= link_to("Badger", root_path, :class => "navbar-brand") %>
 	      </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
