--- a/app/views/layouts/_landing.html.erb
+++ b/app/views/layouts/_landing.html.erb
@@ -1,4 +1,4 @@
-<div class="col-xs-6 col-xs-offset-3 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
+<div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
   <div class="landing-heading">
     <img class="landing-logo" src="../images/logo-small.png"/>
     <h1>Badger</h1>
