--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "Badger" %></title>
-    <%= favicon_link_tag 'favicon.ico' %>
     <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Badger" %>">
+    <meta name="copyright" content="nohm">
+    <meta name="msapplication-TileImage" content="<%= image_path('logo.png') %>" />
+    <meta name="msapplication-TileColor" content="#232323" />
+
+    <title><%= content_for?(:title) ? yield(:title) : "Badger" %></title>
+
+    <%= favicon_link_tag 'favicon.ico' %>
+    <link rel="fluid-icon" href="<%= image_path('logo.png') %>" title="Badger" />
+    <link rel="apple-touch-icon" sizes="57x57" href="<%= image_path('logo-small.png') %>" />
+    <link rel="apple-touch-icon" sizes="72x72" href="<%= image_path('logo-small.png') %>" />
+    <link rel="apple-touch-icon" sizes="144x144" href="<%= image_path('logo-small.png') %>" />
+
     <%= stylesheet_link_tag "application", :media => "all" %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
