--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Badger" %>">
-    <meta name="copyright" content="nohm">
+    <meta name="copyright" content="<%= ENV["DEV_NAME"] %>">
     <meta name="msapplication-TileImage" content="<%= image_path('logo.png') %>" />
     <meta name="msapplication-TileColor" content="#232323" />
 
