--- a/app/views/mailer/send_new_user_message.html.erb
+++ b/app/views/mailer/send_new_user_message.html.erb
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1><%= t('mailer.new_user.title') %></h1>
-    <p><%= "#{t('mailer.new_user.message')} #{@user.email}" %><br/></p>
+    <p><%= "#{t('mailer.new_user.message')} #{@email}" %><br/></p>
     <p><%= "#{t('mailer.new_user.site_link')} #{@url}" %></p>
   </body>
 </html>
