--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -11,7 +11,7 @@
       <%= f.text_field :title, label: t('global.title') %>
       <%= f.text_field :short, label: t('global.short') %>
       <%= f.text_field :abb, label: t('global.abbrevation') %>
-      <%= f.text_field :adress, :help => 'Replace all the \'enters\' by <br>', label: t('global.adress') %>
+      <%= f.text_field :address, :help => 'Replace all the \'enters\' by <br>', label: t('global.address') %>
     </div>
     <div class="panel-footer">
   	 <%= f.submit t('company.new.button'), data: { disable_with: t('company.new.button_send') } %>
