--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -11,9 +11,9 @@
       </p>
     </div>
     <div class="col-xs-6 col-md-4 col-md-offset-2">
-      <strong><%= t('invoice.show.adressee') %></strong>
+      <strong><%= t('invoice.show.addressee') %></strong>
       <p>
-        <%= raw @company.adress %>
+        <%= raw @company.address %>
       </p>
     </div>
   </div>
@@ -43,7 +43,13 @@
           <dt><%= key.gsub('_',' ') %></dt><dd></dd>
           <% value.each do |status, price| %>
             <dt><%= status %></dt>
-            <dd><%= "#{number_to_currency(price[1], unit: '€')} (#{price[0]}x)" %></dd>
+            <dd>
+              <% unless price[2] == -1 %>
+                <%= "#{price[0]} x #{number_to_currency(price[2], unit: '€')} = #{number_to_currency(price[1], unit: '€')}" %>
+              <% else %>
+                <%= "#{number_to_currency(price[1], unit: '€')} (#{price[0]}x)" %>
+              <% end %>
+            </dd>
           <% end %>
           <br>
         <% end %>
@@ -104,7 +110,7 @@
       </p>
     </div>
     <div class="col-xs-6 col-md-4 col-md-offset-2">
-      <strong><%= t('invoice.show.signature_adressee') %></strong>
+      <strong><%= t('invoice.show.signature_addressee') %></strong>
       <p style="margin-top:50px">
         ____________________
       </p>
