--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -21,7 +21,7 @@
   <hr>
 
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-sm-6 col-md-6">
       <dl class="dl-horizontal">
         <dt><%= t('invoice.show.date') %></dt>
         <dd><%= @invoice.created_at.to_date %></dd>
@@ -37,7 +37,7 @@
       </dl>
     </div>
 
-    <div class="col-md-6">
+    <div class="col-sm-6 col-md-6">
       <dl class="dl-horizontal">
         <% @price_type_total.each do |key, value| %>
           <dt><%= key.gsub('_',' ') %></dt><dd></dd>
