--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -21,7 +21,7 @@
   <hr>
 
   <div class="row">
-    <div class="col-sm-6 col-md-6">
+    <div class="col-xs-6 col-sm-6 col-md-4">
       <dl class="dl-horizontal">
         <dt><%= t('invoice.show.date') %></dt>
         <dd><%= @invoice.created_at.to_date %></dd>
@@ -36,29 +36,30 @@
         <% end %>
       </dl>
     </div>
+    
+    <% @price_type_total.each do |key, value| %>
+      <div class="col-xs-6 col-sm-6 col-md-4">
+        <dl class="dl-horizontal">
 
-    <div class="col-sm-6 col-md-6">
-      <dl class="dl-horizontal">
-        <% @price_type_total.each do |key, value| %>
-          <dt><%= key.gsub('_',' ') %></dt><dd></dd>
-          <% value.each do |status, price| %>
-            <dt><%= status %></dt>
-            <dd>
-              <% unless params[:type] == 'slip' %>
-                <% unless price[2] == -1 %>
-                  <%= "#{price[0]} x #{number_to_currency(price[2], unit: '€')} = #{number_to_currency(price[1], unit: '€')}" %>
+            <dt><%= key.gsub('_',' ') %></dt><dd></dd>
+            <% value.each do |status, price| %>
+              <dt><%= status %></dt>
+              <dd>
+                <% unless params[:type] == 'slip' %>
+                  <% unless price[2] == -1 %>
+                    <%= "#{price[0]} x #{number_to_currency(price[2], unit: '€')} = #{number_to_currency(price[1], unit: '€')}" %>
+                  <% else %>
+                    <%= "#{number_to_currency(price[1], unit: '€')} (#{price[0]}x)" %>
+                  <% end %>
                 <% else %>
-                  <%= "#{number_to_currency(price[1], unit: '€')} (#{price[0]}x)" %>
+                  <%= "#{price[0]}x" %>
                 <% end %>
-              <% else %>
-                <%= "#{price[0]}x" %>
-              <% end %>
-            </dd>
-          <% end %>
-          <br>
-        <% end %>
-      </dl>
-    </div>
+              </dd>
+            <% end %>
+            <br>
+        </dl>
+      </div>
+    <% end %>
   </div>
 </div>
 
