--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -27,34 +27,37 @@ $black-transparent: rgba(0, 0, 0, 0.6);
 $white-transparent: rgba(255, 255, 255, 0.6);
 
 // Different grayscales
-$gray-darker: #202020;
-$gray-dark: #303030;
-$gray: #505050;
-$gray-light: #b0b0b0;
+$gray-darker:  #202020;
+$gray-dark:    #303030;
+$gray:         #505050;
+$gray-light:   #b0b0b0;
 $gray-lighter: #e0e0e0;
 
 // Colours from colourlovers.com
 $brand-primary: #5967B2; // periwinky
 $brand-success: #88A65E; // hans wegner
-$brand-info: #81A8B8; // pacifica
+$brand-info:    #81A8B8; // pacifica
 $brand-warning: #F5B349; // groviera moon
-$brand-danger: #CC2A41; // amaranth
-$brand-custom: #556270; // mighty slate
+$brand-danger:  #CC2A41; // amaranth
+$brand-custom:  #556270; // mighty slate
 
 // Apply colours to warning elements
-$input-border-focus: $brand-info;
-$state-success-text: $brand-success;
-$state-success-bg: lighten($brand-success, 30%);
+$input-border-focus:   $brand-info;
+$state-success-text:   $brand-success;
+$state-success-bg:     lighten($brand-success, 30%);
 $state-success-border: lighten($brand-success, 20%);
-$state-info-text: $brand-info;
-$state-info-bg: lighten($brand-info, 30%);
-$state-info-border: lighten($brand-info, 20%);
-$state-warning-text: $brand-warning;
-$state-warning-bg: lighten($brand-warning, 30%);
+$state-info-text:      $brand-info;
+$state-info-bg:        lighten($brand-info, 30%);
+$state-info-border:    lighten($brand-info, 20%);
+$state-warning-text:   $brand-warning;
+$state-warning-bg:     lighten($brand-warning, 30%);
 $state-warning-border: lighten($brand-warning, 20%);
-$state-danger-text: $brand-danger;
-$state-danger-bg: lighten($brand-danger, 30%);
-$state-danger-border: lighten($brand-danger, 20%);
+$state-danger-text:    $brand-danger;
+$state-danger-bg:      lighten($brand-danger, 30%);
+$state-danger-border:  lighten($brand-danger, 20%);
+
+// Add Open-Sans to the serif font-queue
+$font-family-sans-serif: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif !default;
 
 // Import bootstrap completely
 @import "bootstrap";
@@ -383,8 +386,10 @@ $spinner-thickness:  8px; // Odd numbers created a "wobble" effect.
   z-index: 10000;
 }
 
+// Remove and re-align some stuff we want different on invoices
+// The padding-top is ONLY for our personal printing paper
 #invoices.show {
-  padding-top: 140px;
+  padding-top: 160px;
   footer {
     display: none;
   }
