Another typo in batch

--- a/app/views/home/batch.html.erb
+++ b/app/views/home/batch.html.erb
@@ -42,7 +42,7 @@
         <%= f.check_box :accessoires, label: t('global.accessoires') %>
       <% end %>
 
-      <%= f.select :class_id, @class_names, label: t('global.class') %>
+      <%= f.select :classifications_id, @class_names, label: t('global.class') %>
 
       <%= f.text_area :note, label: t('global.note') %>
 
